# Arithmetic-Formatter

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  arithmetic_formatter.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  python-ci.yml  tests.yml
api/: index.html
arithmetic_formatter/: __init__.py  cli.py  core.py
docs/: api.md  index.md  usage.md
formats/: __init__.py  vertical.py
search/: search_index.json
tests/: test_cli.py  test_core.py
usage/: index.html
